--- a/contact.html
+++ b/contact.html
@@ -6,4 +6,4 @@ layout: default
 
 <p />
 <p>This is <a href="http://septimo7.github.io" target="_blank">Zhuang</a>! I'm documenting my learning notes in this blog.</p>
-<p>Send me an email: liuzhuanghkust AT gmail.com if you have questions or find errors :)</p>
+<p>Send me an email: liuzhuanghkust AT gmail.com if you like ._. </p>
